<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="MySecondStructure" Id="{903da5a0-ff7a-4726-8ba5-7896a90f4738}">
    <Declaration><![CDATA[TYPE MySecondStructure :
STRUCT
	myLint : LINT;
	myDint : DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>