<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="MyStructure" Id="{7da430bf-a2cb-4a97-a4c8-e5a672f9c2bb}">
    <Declaration><![CDATA[TYPE MyStructure :
STRUCT
	myBool : BOOL;
	myArrayOfBool : ARRAY [0..10] OF BOOL;
	myReal : REAL;
	myArrayOfStructures : ARRAY [0..1] OF MySecondStructure;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>